feat: upgrade to spring boot 4